[package]
name = "random_images"
version = "1.1.1"
edition = "2021"
authors = ["sakunia"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.40", features = ["embed"] }
rand = "0.8.4"
rust-embed = "6.4.0"
serde = "1.0.143"
serde_derive = "1.0.143"
tokio = "1.20.1"
toml = "0.5.9"
